# wealth-transfer-mvp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml  run.sh
backend/: api.py  pdf_export.py  pyproject.toml
backend/engine/: __init__.py  citations.py  engine.py  inputs.py  tax_context.py
backend/engine/regimes/: __init__.py  base.py  il.py  ny.py  tx.py
backend/engine/strategies/: __init__.py  base.py  diversified.py  explain.py  hold_until_death.py  roth_ira.py  section_529.py  taxable_brokerage.py  traditional_ira.py  trump_account.py  ugma_utma.py
backend/rules/: rules_2025.json  rules_2026.json
backend/tests/: conftest.py  test_529_caps.py  test_all_strategies.py  test_new_features.py  test_state_regimes.py  test_tax_context.py  test_taxable_brokerage.py  test_trump_account.py
backend/validators/: aiwyn.py  blue_j.py
backend/wealth_transfer_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccumulationChart.tsx  CitationFootnote.tsx  ComparisonTable.tsx  InputForm.tsx  MoreInformation.tsx  RecommendationsPanel.tsx  TaxDragWaterfall.tsx  TaxExplanations.tsx  TradeoffMatrix.tsx
frontend/lib/: api.ts  presets.ts  types.ts  vehicles.ts
