[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wealth-transfer-engine"
version = "0.1.0"
description = "Deterministic, citation-traced wealth-transfer strategy comparison engine."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5,<3",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "reportlab>=4.0,<5",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
]

[tool.setuptools]
# Tell setuptools exactly which folders are Python packages — auto-discovery sees
# 'engine', 'tests', and 'validators' as siblings and refuses to pick.
packages = ["engine", "engine.regimes", "engine.strategies", "validators"]
py-modules = ["api", "pdf_export"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
